kubernetes/apps/volsync/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: volsync
  labels:
    # https://github.com/backube/volsync/issues/1430
    pod-security.kubernetes.io/enforce: baseline
