kubernetes/apps/volsync/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: volsync
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: volsync
  namespace: volsync
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8443
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: volsync
  namespace: volsync
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
  egress:
    - toEntities:
      - kube-apiserver
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: snapshot-controller
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-system-snapshot-controller
      app.kubernetes.io/name: snapshot-controller
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8080
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: snapshot-controller
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-system-snapshot-controller
      app.kubernetes.io/name: snapshot-controller
  egress:
    - toEntities:
      - kube-apiserver
